--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Portfolio</title>
+	<title>Portfolios</title>
 	<link rel="stylesheet" type="text/css" href="index_css.css">
 </head>
 <body>
