profolio files updted

--- a/index.html
+++ b/index.html
@@ -1,47 +1,69 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Portfolio</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Sabir Shaikh: Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="index_css.css">
 </head>
 <body>
-	<div class="ribbon">Header </div>
-	<div class="tab"> 
-		<ul class="tab_ul">
-			<a href="#"><li class="tab_li">HOME</li></a>
-			<a href="#"><li class="tab_li">CONTACT</li></a>
-			<a href="#"><li class="tab_li">ABOUT</li></a>
-		</ul>
+
+<div class="header">
+	<p>linkedin ----- github ----- yotube</p>
+</div>
+
+<div class="hometab">
+	<ul class="hometab_ul">
+		<li style="color: black;" class="hometab_li">HOME</li>
+		<li style="color: gray; " class="hometab_li">CONTACT</li>
+		<li style="color: gray; " class="hometab_li">ABOUT</li>
+	</ul>
+</div>
+
+<div class="protitle">
+		<center><h3>PROJECTS</h3></center>
+</div>
+
+
+<div class=maindiv>
+	<div class="div1">
+		<img class="imghtml" src="html-css-js.jpg">
 	</div>
-
-	<center><div class="project">
-		<CENTER><h1>PROJECTS</h1></CENTER>
-	</div></center>
-
-
-
-	<div class="projects">
-		<div class="div_1">
-			<div class="div_2">HTML Project </div>
-			<div class="div_3">Project description</div>	
-		</div>	
 	
-
-	
-		<div class="div_1">
-			<div class="div_2">Java Project </div>
-			<div class="div_3">Project description</div>	
-		</div>	
-	
-
-
-		<div class="div_1">
-			<div class="div_2">Python Project </div>
-			<div class="div_3">Project description</div>	
-		</div>	
+	<div class="div2">
+		
 	</div>
+</div>
 
-	<div class="footer">footer</div>
+
+<div class=maindiv>
+	<div class="div3">
+		
+	</div>
+	
+	<div class="div4">
+		<img class="imgjava" src="java.png">
+	</div>
+</div>
+
+
+
+
+<div class=maindiv>
+	<div class="div5">
+		<img class="imgpython" src="python.png">
+	</div>
+	
+	<div class="div6">
+		
+	</div>
+</div>
+
+
+
+
+
+
 
 </body>
 </html>
