Home page Design

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
 <div class="hometab">
 	<ul class="hometab_ul">
-		<li style="color: black;" class="hometab_li">HOME</li>
-		<li style="color: gray; " class="hometab_li">CONTACT</li>
-		<li style="color: gray; " class="hometab_li">ABOUT</li>
+		<li class="hometab_li"><a href="#">HOME</a></li>
+		<li class="hometab_li"><a href="cantact.html">CONTACT</a></li>
+		<li class="hometab_li"><a href="about.html">ABOUT</a></li>
 	</ul>
 </div>
 
 <div class="protitle">
-		<center><h3>PROJECTS</h3></center>
+		<center><h3>MY WORK</h3></center>
 </div>
 
 
@@ -31,7 +31,11 @@
 	</div>
 	
 	<div class="div2">
-		
+		<p>		I made this portfolio using HTML, CSS, JAVASCRIPT, ADOBEXD,ect.    .....
+			  To see my work please click on below buton
+
+		</p>
+		<button class="bttn">Explore</button>
 	</div>
 </div>
 
