--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Sabir Shaikh: Portfolio</title>
-	<link rel="stylesheet" type="text/css" href="index_css.css">
+	<link rel="stylesheet" type="text/css" href="css/index_css.css">
 </head>
 <body>
 
@@ -27,7 +27,7 @@
 
 <div class=maindiv>
 	<div class="div1">
-		<img class="imghtml" src="html-css-js.jpg">
+		<img class="imghtml" src="images/html-css-js.jpg">
 	</div>
 	
 	<div class="div2">
@@ -46,7 +46,7 @@
 	</div>
 	
 	<div class="div4">
-		<img class="imgjava" src="java.png">
+		<img class="imgjava" src="images/java.png">
 	</div>
 </div>
 
@@ -55,7 +55,7 @@
 
 <div class=maindiv>
 	<div class="div5">
-		<img class="imgpython" src="python.png">
+		<img class="imgpython" src="images/python.png">
 	</div>
 	
 	<div class="div6">
